updated doctor dashboard

--- a/templates/doctor_dashboard.html
+++ b/templates/doctor_dashboard.html
@@ -77,8 +77,8 @@ Doctor Dashboard
         </div>
     </div>
     
-    <div class="row mb-4">
-        <div class="col-md-6">
+    <div class="card mt-4">
+        <div class="card-header"> 
             <h3>My Blog Posts</h3>
             <a href="{% url 'doctor_blogs' %}" class="btn btn-primary">View My Blog Posts</a>
         </div>
