--- a/templates/book_appointment.html
+++ b/templates/book_appointment.html
@@ -13,15 +13,15 @@
                     <form id="appointmentForm">
                         {% csrf_token %}
                         <div class="form-group">
-                            <label for="specialty">Specialty</label>
+                            <label for="id_specialty">Specialty</label>
                             {{ form.specialty }}
                         </div>
                         <div class="form-group">
-                            <label for="date">Date of Appointment</label>
+                            <label for="id_date">Date of Appointment</label>
                             {{ form.date }}
                         </div>
                         <div class="form-group">
-                            <label for="start_time">Start Time of Appointment</label>
+                            <label for="id_start_time">Start Time of Appointment</label>
                             {{ form.start_time }}
                         </div>
                         <button type="submit" class="btn btn-primary btn-block rounded-pill">Confirm Appointment</button>
@@ -47,6 +47,20 @@
         return cookieValue;
     }
 
+    function calculateEndTime(startTime) {
+        // Convert startTime to a Date object
+        const [hours, minutes] = startTime.split(':').map(Number);
+        const startDate = new Date();
+        startDate.setHours(hours, minutes);
+
+        // Add 45 minutes
+        const endDate = new Date(startDate.getTime() + 45 * 60000);
+        const endHours = endDate.getHours().toString().padStart(2, '0');
+        const endMinutes = endDate.getMinutes().toString().padStart(2, '0');
+        
+        return `${endHours}:${endMinutes}`;
+    }
+
     function bookAppointment(event) {
         event.preventDefault();
 
@@ -57,6 +71,7 @@
         const specialty = formData.get('specialty');
         const date = formData.get('date');
         const start_time = formData.get('start_time');
+        const end_time = calculateEndTime(start_time);
 
         fetch(`/book_appointment/{{ doctor.id }}/`, {
             method: 'POST',
@@ -67,7 +82,8 @@
             body: JSON.stringify({
                 specialty: specialty,
                 date: date,
-                start_time: start_time
+                start_time: start_time,
+                end_time: end_time
             })
         })
         .then(response => response.json())
@@ -83,4 +99,5 @@
 
     document.getElementById('appointmentForm').addEventListener('submit', bookAppointment);
 </script>
+
 {% endblock %}
