--- a/templates/base.html
+++ b/templates/base.html
@@ -463,7 +463,7 @@ textarea {
             <ul class="navbar-nav ml-auto">
                 {% if user.is_authenticated %}
                     <li class="nav-item">
-                        <a class="nav-link" href="{% if user.user_type == 'doctor' %}{% url 'doctor_profile' user.id %}{% else %}{% url 'patient_profile' user.id %}{% endif %}">Profile</a>
+                        <a class="nav-link" href="{% url 'profile' %}">Profile</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'logout' %}">Logout</a>
