--- a/templates/patient_profile.html
+++ b/templates/patient_profile.html
@@ -15,6 +15,6 @@
         </div>
     </div>
 
-    <a href="{% url 'edit_patient_profile' patient.id %}" class="btn btn-warning mt-3">Edit Profile</a>
+    <a href="{% url 'edit_patient_profile' profile.id %}" class="btn btn-warning mt-3">Edit Profile</a>
 </div>
 {% endblock %}
