--- a/templates/patient_profile.html
+++ b/templates/patient_profile.html
@@ -14,7 +14,6 @@
             <p class="card-text"><strong>Address:</strong> {{ patient.address }}</p>
         </div>
     </div>
-
-    <a href="{% url 'edit_patient_profile' profile.id %}" class="btn btn-warning mt-3">Edit Profile</a>
+    <a href="{% url 'edit_patient_profile' patient.id %}">Edit Profile</a>
 </div>
 {% endblock %}
