--- a/templates/edit_patient_profile.html
+++ b/templates/edit_patient_profile.html
@@ -8,7 +8,7 @@
     <form method="post" novalidate>
         {% csrf_token %}
         {{ form.as_p }}
-        <button type="submit" class="btn btn-primary">Update Profile</button>
+        <button type="submit" class="btn btn-primary">Save Changes</button>
     </form>
 </div>
 {% endblock %}
