--- a/templates/doctor_blogs.html
+++ b/templates/doctor_blogs.html
@@ -18,8 +18,8 @@
                     {% endif %}
                     <p><strong>Summary:</strong> {{ post.summary }}</p>
                     <p><strong>Draft:</strong> {% if post.is_draft %}Yes{% else %}No{% endif %}</p>
-                    <a href="{% url 'post_detail' post.id %}" class="btn btn-primary mt-3">Read More</a>
-                    <a href="{% url 'edit_blog_post' post.id %}" class="btn btn-warning mt-3">Update Post</a>
+                    <a href="{% url 'post_detail' post.id %}" class="btn btn-primary btn-custom mt-3">Read More</a>
+                    <a href="{% url 'edit_blog_post' post.id %}" class="btn btn-warning btn-custom mt-3">Update Post</a>
                 </div>
             {% endfor %}
         </div>
@@ -28,3 +28,9 @@
     {% endif %}
 </div>
 {% endblock %}
+<script>
+    .btn-custom {
+        width: 150px; /* Adjust the width as needed */
+        text-align: center;
+    }
+</script>    
