--- a/templates/doctor_blogs.html
+++ b/templates/doctor_blogs.html
@@ -32,7 +32,7 @@
 {% endblock %}
 <script>
     .btn-custom {
-        width: 150px; /* Adjust the width as needed */
+        width: 100px; 
         text-align: center;
     }
 </script>    
